--- a/src/components/shared/fonts.css
+++ b/src/components/shared/fonts.css
@@ -1,1 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=IBM+Plex+Sans');
+
+.apexcharts-menu {
+    font-family: "IBM Plex Sans";
+}
+
+.apexcharts-menu-item {
+    font-size: 14px !important;
+}
