--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=IBM+Plex+Sans');
+@import url("https://use.typekit.net/kpw2dbr.css");
