--- a/src/components/charts/apexcharts.css
+++ b/src/components/charts/apexcharts.css
@@ -1,9 +1,14 @@
 /* This is a fix to the unchangeable (and ugly) fonts for ApexCharts menus */
 
 .apexcharts-menu {
-  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 .apexcharts-menu-item {
   font-size: 14px !important;
+}
+
+.apexcharts-tooltip-text-value {
+  font-weight: normal !important;
+  font-size: 14px;
 }
